# multiagent

./: .env.example  .gitignore  CONFIG.md  GETTING_STARTED.md  LICENSE  README.md  SPEC_KIT.md  ai_research_multiagent.ipynb  example_research.py  multiagent.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  pr.yml
src/: __init__.py  agents.py  tools.py
tests/: test_multiagent.py
